--- a/README.org
+++ b/README.org
@@ -1,6 +1,12 @@
 * Project 1 - Recursive Search
 
-* Due TBD
+Last Name: Wong
+
+First Name: Justin
+
+Github Username: Justinw21
+
+* Due 2/27
 
 
 
